--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -132,11 +132,13 @@
                                         <h4 style="font-family: fortnite; font-size: 20px; text-transform: uppercase;">Your computer might need admin permissions to inject the Epic Games Attack Packets successfully. Do you want to continue?</h4>
                                         <div id="menu-outer">
                                             <div class="table">
-                                                <ul id="horizontal-list">                                
-                                                    <li><a href="index.html#" class="yes_no" id="confirm_yes"><span>Yes</span></a></li>
-                                                    &nbsp;&nbsp;&nbsp;
-                                                    <li><a href="index.html#" class="yes_no" id="confirm_no"><span>No</span></a></li>
-                                                </ul>
+                                                <center>
+                                                    <ul id="horizontal-list">                                
+                                                        <li><a href="index.html#" class="yes_no" id="confirm_yes"><span>Yes</span></a></li>
+                                                        &nbsp;&nbsp;&nbsp;
+                                                        <li><a href="index.html#" class="yes_no" id="confirm_no"><span>No</span></a></li>
+                                                    </ul>
+                                                </center>
                                             </div>
                                         </div>
                                     </div>
