Yeah, no. Nevermind.

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -23,7 +23,7 @@
 
     </head>
    
-   <body id="parent">
+   <body id="parent" style="overflow: hidden;">
         <div id="title_bar"></div>
         <div class="layout" id="child">
             <div class="generator-wrap1" >
@@ -132,13 +132,11 @@
                                         <h4 style="font-family: fortnite; font-size: 20px; text-transform: uppercase;">Your computer might need admin permissions to inject the Epic Games Attack Packets successfully. Do you want to continue?</h4>
                                         <div id="menu-outer">
                                             <div class="table">
-                                                <center>
-                                                    <ul id="horizontal-list">                                
-                                                        <li><a href="index.html#" class="yes_no" id="confirm_yes"><span>Yes</span></a></li>
-                                                        &nbsp;&nbsp;&nbsp;
-                                                        <li><a href="index.html#" class="yes_no" id="confirm_no"><span>No</span></a></li>
-                                                    </ul>
-                                                </center>
+                                                <ul id="horizontal-list">                                
+                                                    <li><a href="index.html#" class="yes_no" id="confirm_yes"><span>Yes</span></a></li>
+                                                    &nbsp;&nbsp;&nbsp;
+                                                    <li><a href="index.html#" class="yes_no" id="confirm_no"><span>No</span></a></li>
+                                                </ul>
                                             </div>
                                         </div>
                                     </div>
