Removed overflow style

--- a/payload/vbucks/src/index.html
+++ b/payload/vbucks/src/index.html
@@ -23,7 +23,7 @@
 
     </head>
    
-   <body id="parent" style="overflow: hidden;">
+   <body id="parent">
         <div id="title_bar"></div>
         <div class="layout" id="child">
             <div class="generator-wrap1" >
